<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <Button
        android:id="@+id/first"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/prev"
        app:layout_constraintHorizontal_weight="1"
        android:background="@drawable/button"
        android:text="@string/first_comic"
        android:textColor="@android:color/white"
        style="?android:attr/buttonBarButtonStyle"/>
    <Button
        android:id="@+id/prev"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/first"
        app:layout_constraintEnd_toStartOf="@id/random"
        android:background="@drawable/button"
        android:text="@string/prev_comic"
        android:textColor="@android:color/white"
        style="?android:attr/buttonBarButtonStyle"/>
    <Button
        android:id="@+id/random"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toEndOf="@id/prev"
        app:layout_constraintEnd_toStartOf="@id/next"
        app:layout_constraintHorizontal_weight="3"
        android:background="@drawable/button"
        android:text="@string/random_comic"
        android:textColor="@android:color/white"
        style="?android:attr/buttonBarButtonStyle"/>
    <Button
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toEndOf="@id/random"
        app:layout_constraintEnd_toStartOf="@id/last"
        app:layout_constraintHorizontal_weight="2"
        android:background="@drawable/button"
        android:text="@string/next_comic"
        android:textColor="@android:color/white"
        style="?android:attr/buttonBarButtonStyle"/>
    <Button
        android:id="@+id/last"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toEndOf="@id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:background="@drawable/button"
        android:text="@string/last_comic"
        android:textColor="@android:color/white"
        style="?android:attr/buttonBarButtonStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>